--- a/final/HeidiLaw/Sandbox/CSS/stylehex3.css
+++ b/final/HeidiLaw/Sandbox/CSS/stylehex3.css
@@ -1,5 +1,11 @@
 /** with thicker borders **/
-
+.container {
+	width: 1440px; 
+	overflow-y: hidden;
+}
+.wrapper {
+	width: 1440px;
+}
 .hex {
     float: left;
     margin-left: 14px;
